--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,14 @@
             "email": "bndady@gmail.com",
             "homepage": "https://briandady.com",
             "role": "Developer"
-        }
+        },
     ],
+    "version": "0.1.0",
+    "autoload": {
+        "psr-4": {
+            "TotallyQuiche\\URItoLink\\": "src/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^8"
     }
